# goit-project2-django-assistant

./: .gitignore  LICENSE  README.md  Readme_UA.md  Readme_ua.md  pyproject.toml  requirements.txt
personal_assistant/: .env.example  env.txt  manage.py  test.py
personal_assistant/app_assistant/: apps.py  forms.py  urls.py  views.py
personal_assistant/app_contacts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/app_contacts/migrations/: 0001_initial.py  0002_alter_contact_birthday.py  0003_alter_contact_email_alter_contact_phone_number.py  0004_alter_contact_phone_number.py  0005_alter_contact_birthday.py  0006_alter_contact_birthday.py  0007_remove_contact_email_remove_contact_phone_number_and_more.py  0008_remove_phoneemail_phone_number_and_more.py  0009_contact_user_emailaddress_phonenumber_and_more.py  0010_alter_contact_user.py  0011_alter_contact_user.py  0012_alter_contact_user.py  0014_alter_contact_user.py  (+3 more)
personal_assistant/app_download/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/app_news/: apps.py  urls.py  views.py
personal_assistant/app_notes/: admin.py  apps.py  forms.py  urls.py  views.py
personal_assistant/app_storage/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
personal_assistant/noteapp/: forms.py  models.py  tests.py  urls.py  views.py
personal_assistant/personal_assistant/: asgi.py  settings.py  urls.py  wsgi.py
personal_assistant/tests/: test_note.py
personal_assistant/users/: forms.py  models.py  style.css  urls.py  views.py
(+68 files in other folders)
